# cognitive-companion-openenv

./: .gitattributes  .gitignore  Dockerfile  README.md  baseline_agent.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py  test_env.py  validate-submission.sh  validate.sh  validate.sh.save  validate.shchmod +x validate.sh
dashboard/: app.js  index.html  stitch_screen.html  styles.css
server/: app.py  environment.py
tests/: test_env_baseline.py
