[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-companion-env"
version = "0.1.0"
description = "Cognitive Companion Environment for OpenEnv"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
